--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,20 @@
 {
-    "name": "daylerees/anbu",
-    "description": "The Anbu profiler for Laravel 4.",
-    "keywords": ["laravel", "anbu", "profiler", "debug"],
+    "name": "purple/anbu",
+    "description": "debug profiler",
     "license": "MIT",
     "authors": [
         {
-            "name": "Dayle Rees",
-            "email": "me@daylerees.com",
-            "homepage": "http://daylerees.com"
+            "name": "Krasen",
+            "email": "jhasheng@hotmail.com"
         }
     ],
     "require": {
-        "laravel/framework": "~4.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit":   "~4.2.2",
-        "mockery/mockery":   "~0.9.1"
+        "php": ">=5.5.9",
+        "illuminate/support": "5.2.*"
     },
     "autoload": {
         "psr-4": {
-            "Anbu\\": "src"
+            "Purple\\Anbu\\": "src/"
         },
         "files": [
             "src/helpers.php"
